--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1076,7 +1076,7 @@ a:hover {
 
 .portfolio-details .portfolio-info {
   padding: 20px;
-  box-shadow: 0px 0 30px rgba(255, 0, 0, 0.1);
+  /* box-shadow: 0px 0 30px rgba(255, 110, 110, 0.1); */
 }
 
 .portfolio-details .portfolio-info h3 {
